--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "last-fm-auto-tweeter",
-  "version": "0.0.1",
+  "name": "lastfm-tweeter",
+  "version": "1.0.0",
   "description": "Automatically tweets top artists from Last.fm",
   "main": "lastfmtweeter.js",
-  "author": "Chris Barry <me@chrisb.xyz>",
-  "license": "None",
   "repository": {
     "type": "git",
-    "url": "null"
+    "url": "git+https://github.com/ChrisW-B/LastFM-Tweeter.git"
   },
-  "keywords": ["lastfm", "twitter"],
+  "keywords": [
+    "lastfm",
+    "twitter"
+  ],
+  "author": "Chris Barry <me@chrisb.xyz>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ChrisW-B/LastFM-Tweeter/issues"
+  },
+  "homepage": "https://github.com/ChrisW-B/LastFM-Tweeter#readme",
   "dependencies": {
-    "simple-lastfm": "git://github.com/ChrisW-B/simple-lastfm#master",
-    "jsonfile": "*",
-    "twitter": "*",
-    "winston": "*"
-  },
-  "engines": {
-    "node": "0.10.x",
-    "npm": "1.3.x"
+    "lastfm-njs": "^0.1.2",
+    "twitter": "^1.4.0",
+    "winston": "^2.2.0"
   }
 }
