--- a/package.json
+++ b/package.json
@@ -19,7 +19,21 @@
   "homepage": "https://github.com/ChrisW-B/LastFM-Tweeter#readme",
   "dependencies": {
     "lastfm-njs": "^0.x",
-    "twitter": "^1.x",
-    "winston": "^2.x"
+    "twitter": "^1.7.1",
+    "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.3.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "nodemon": "^1.11.0"
+  },
+  "scripts": {
+    "start": "node lastfmtweeter.js"
   }
 }
