--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "winston": "^2.4.4"
   },
   "devDependencies": {
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "prettier": "^1.17.1"
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "prettier": "^1.18.2"
   },
   "scripts": {
     "start": "node lastfmtweeter.js",
     "lint:js": "eslint ./ --ignore-pattern 'public/**/*.js' --ignore-pattern 'coverage/**/*.js'",
     "lint:js:fix": "eslint --fix ./ --ignore-pattern 'public/**/*.js' --ignore-pattern 'coverage/**/*.js'",
-    "prettier": "prettier \"./{client,config,scripts,server}/**/*.{j,t}s{on,}\"",
+    "prettier": "prettier \"./**/*.{j,t}s{on,}\"",
     "prettier:fix": "prettier \"./**/*.{j,t}s{on,}\" --write"
   }
 }
