--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,10 @@
 {
-  "printWidth": 110,
-  "tabWidth": 2,
-  "semi": true,
-  "useTabs": false,
-  "singleQuote": true,
+  "jsxBracketSameLine": false,
   "jsxSingleQuote": true,
-  "trailingComma": "none",
-  "bracketSpacing": true
+  "printWidth": 100,
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": false
 }
