--- a/package.json
+++ b/package.json
@@ -23,16 +23,21 @@
     "twitter-lite": "1.1.0"
   },
   "devDependencies": {
+    "@types/node": "15.0.1",
+    "@typescript-eslint/eslint-plugin": "4.22.0",
+    "@typescript-eslint/parser": "4.22.0",
     "dotenv": "8.2.0",
     "eslint": "7.25.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "3.4.0",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "typescript": "4.2.4"
   },
   "scripts": {
-    "start": "node lastfmtweeter.js",
+    "build": "tsc",
+    "start": "node dist/index.js 6 7day",
     "lint:js": "eslint ./ --ignore-pattern 'public/**/*.js' --ignore-pattern 'coverage/**/*.js'",
     "lint:js:fix": "eslint --fix ./ --ignore-pattern 'public/**/*.js' --ignore-pattern 'coverage/**/*.js'",
     "prettier": "prettier \"./**/*.{j,t}s{on,}\"",
