--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,9 @@ jobs:
           CI: true
 
       - name: 📦 Publish to Lamda
-        run: npm run deploy --if-present
+        uses: serverless/github-action@master
+        with:
+          args: deploy
         env:
-          CI: true
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
